[close ##47] Fix webkit appearance of inputs on mobile

--- a/app/assets/stylesheets/_default.css.sass
+++ b/app/assets/stylesheets/_default.css.sass
@@ -203,6 +203,7 @@ input[type="text"]
   +box-shadow(inset 1px 1px 1px #CCC, 0px 0px 0px 1px #CCC)
   +border-radius(5px)
   font-size: 1.4em
+  -webkit-appearance: none
 
 input[type="submit"]
   width: 100%
